Add and Create Page

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -63,6 +63,12 @@
           "bundleName": "sapips.training.employeeapp.i18n.i18n"
         }
       },
+      "oModelJSON" : {
+          "type" : "sap.ui.model.json.JSONModel"
+      },
+      "oModelSkillProf" : {
+          "type" : "sap.ui.model.json.JSONModel"
+      },
       "": {
         "dataSource": "mainService",
         "preload": true,
@@ -91,16 +97,33 @@
       "routes": [
         {
           "name": "RouteEmployeeList",
-          "pattern": ":?query:",
+          "pattern": "",
           "target": [
             "TargetEmployeeList"
+          ]
+        },
+        {
+          "name": "RouteCreatePage",
+          "pattern": "Create",
+          "target": [
+            "TargetCreatePage"
           ]
         }
       ],
       "targets": {
         "TargetEmployeeList": {
-          "id": "EmployeeList",
-          "name": "EmployeeList"
+          "viewId": "EmployeeList",
+          "viewName": "EmployeeList",
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false
+        },
+        "TargetCreatePage": {
+          "viewId": "CreatePage",
+          "viewName": "CreatePage",
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false
         }
       }
     },
